add user updates